--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
                     <li><a href="">Careers</a></li>
                 </ul>
             </div>
-            <button>Request Invite</button>
+            <button class="button">Request Invite</button>
         </nav>
     </header>
     <main>
         <div class="hero">
-            <img src="images/image-mockups.png" alt="Background Intro">
+            <div class="bg-img">
+                <img class="intro-img" src="./images/bg-intro-desktop.svg" alt='Background image'>
+            </div>
+            <div class="intro-mock">
+                <img src="images/image-mockups.png" alt="Background Intro">
+            </div>
             <div class="content">
                 <h1>Next generation digital banking</h1>
                 <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
